Slight fix of symmetrical alignment with content

--- a/src/components/ProductCard/card.css
+++ b/src/components/ProductCard/card.css
@@ -13,7 +13,7 @@
   background-image: url("../../assets/image-product-desktop.jpg");
   background-size: cover;
   min-width: 50%;
-  min-height: 34rem;
+  min-height: 33rem;
 }
 
 /* Text Section */
